# ray-tracing-in-one-weekend

./: Cargo.toml  README.md
src/: camera.rs  hittable.rs  main.rs  material.rs  ray.rs  vec3.rs  world.rs
src/hittable/: sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs
