[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
authors = ["Sean McLoughlin <smcloughlin1015@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.8.0"
rand = "0.7.3"
image = "0.23.12"
indicatif = { version = "0.15", features = ["rayon"] }
rayon = "1.3.0"
